cabal-version:   3.0
name:            gcl
version:         0.1.0.0
license:         NONE
author:          Amir Khaki
maintainer:      amirkhaki995@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, parsec
    hs-source-dirs:   src
    default-language: Haskell2010
