cabal-version:   3.0
name:            gcl
version:         0.1.0.0
license:         NONE
author:          Amir Khaki
maintainer:      amirkhaki995@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable gcl
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      megaparsec ^>=9.7.0,
                      text,
                      parser-combinators
    hs-source-dirs:   src
    default-language: Haskell2010
